@@ -5,13 +5,13 @@ import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
 import javafx.concurrent.Task;
+import javafx.geometry.Insets;
 import javafx.geometry.Side;
 import javafx.scene.Node;
 import javafx.scene.control.Button;
@@ -23,13 +23,14 @@ import javafx.scene.control.RadioMenuItem;
 import javafx.scene.control.SeparatorMenuItem;
 import javafx.scene.control.ToggleGroup;
 import javafx.scene.control.Tooltip;
+import javafx.scene.layout.FlowPane;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.Priority;
 import javafx.scene.layout.VBox;
 
-import org.jabref.Globals;
 import org.jabref.gui.BasePanel;
 import org.jabref.gui.DialogService;
+import org.jabref.gui.Globals;
 import org.jabref.gui.JabRefFrame;
 import org.jabref.gui.actions.ActionFactory;
 import org.jabref.gui.actions.StandardActions;
@@ -39,8 +40,8 @@ import org.jabref.gui.keyboard.KeyBindingRepository;
 import org.jabref.gui.undo.NamedCompound;
 import org.jabref.gui.undo.UndoableKeyChange;
 import org.jabref.gui.util.TaskExecutor;
-import org.jabref.logic.bibtexkeypattern.BibtexKeyGenerator;
-import org.jabref.logic.bibtexkeypattern.BibtexKeyPatternPreferences;
+import org.jabref.logic.citationkeypattern.CitationKeyGenerator;
+import org.jabref.logic.citationkeypattern.CitationKeyPatternPreferences;
 import org.jabref.logic.help.HelpFile;
 import org.jabref.logic.l10n.Localization;
 import org.jabref.logic.openoffice.OOBibStyle;
@@ -128,8 +129,8 @@ public class OpenOfficePanel {
         update.setMaxWidth(Double.MAX_VALUE);
 
         loader = new StyleLoader(ooPrefs,
-                                 Globals.prefs.getLayoutFormatterPreferences(Globals.journalAbbreviationLoader),
-                                 Globals.prefs.getDefaultEncoding());
+                Globals.prefs.getLayoutFormatterPreferences(Globals.journalAbbreviationRepository),
+                Globals.prefs.getDefaultEncoding());
 
         initPanel();
     }
@@ -149,13 +150,12 @@ public class OpenOfficePanel {
             try {
                 ooBase.selectDocument();
                 dialogService.notify(Localization.lang("Connected to document") + ": "
-                                     + ooBase.getCurrentDocumentTitle().orElse(""));
+                        + ooBase.getCurrentDocumentTitle().orElse(""));
             } catch (WrappedTargetException | IndexOutOfBoundsException |
-                     NoSuchElementException | NoDocumentException ex) {
+                    NoSuchElementException | NoDocumentException ex) {
                 LOGGER.warn("Problem connecting", ex);
                 dialogService.showErrorDialogAndWait(ex);
             }
-
         });
 
         setStyleFile.setMaxWidth(Double.MAX_VALUE);
@@ -171,7 +171,6 @@ public class OpenOfficePanel {
                 }
                 dialogService.notify(Localization.lang("Current style is '%0'", style.getName()));
             });
-
         });
 
         pushEntries.setTooltip(new Tooltip(Localization.lang("Cite selected entries between parenthesis")));
@@ -204,8 +203,8 @@ public class OpenOfficePanel {
                 ooBase.rebuildBibTextSection(databases, style);
                 if (!unresolvedKeys.isEmpty()) {
                     dialogService.showErrorDialogAndWait(Localization.lang("Unable to synchronize bibliography"),
-                                                         Localization.lang("Your OpenOffice/LibreOffice document references the BibTeX key '%0', which could not be found in your current library.",
-                                                                           unresolvedKeys.get(0)));
+                            Localization.lang("Your OpenOffice/LibreOffice document references the citation key '%0', which could not be found in your current library.",
+                                    unresolvedKeys.get(0)));
                 }
             } catch (UndefinedCharacterFormatException ex) {
                 reportUndefinedCharacterFormat(ex);
@@ -216,14 +215,14 @@ public class OpenOfficePanel {
             } catch (IOException ex) {
                 LOGGER.warn("Problem with style file", ex);
                 dialogService.showErrorDialogAndWait(Localization.lang("No valid style file defined"),
-                                                     Localization.lang("You must select either a valid style file, or use one of the default styles."));
+                        Localization.lang("You must select either a valid style file, or use one of the default styles."));
             } catch (BibEntryNotFoundException ex) {
                 LOGGER.debug("BibEntry not found", ex);
                 dialogService.showErrorDialogAndWait(Localization.lang("Unable to synchronize bibliography"), Localization.lang(
-                                                                                                                                "Your OpenOffice/LibreOffice document references the BibTeX key '%0', which could not be found in your current library.",
-                                                                                                                                ex.getBibtexKey()));
+                        "Your OpenOffice/LibreOffice document references the citation key '%0', which could not be found in your current library.",
+                        ex.getCitationKey()));
             } catch (com.sun.star.lang.IllegalArgumentException | PropertyVetoException | UnknownPropertyException | WrappedTargetException | NoSuchElementException |
-                     CreationException ex) {
+                    CreationException ex) {
                 LOGGER.warn("Could not update bibliography", ex);
             }
         });
@@ -236,11 +235,10 @@ public class OpenOfficePanel {
             } catch (UndefinedCharacterFormatException ex) {
                 reportUndefinedCharacterFormat(ex);
             } catch (com.sun.star.lang.IllegalArgumentException | UnknownPropertyException | PropertyVetoException |
-                     CreationException | NoSuchElementException | WrappedTargetException | IOException |
-                     BibEntryNotFoundException ex) {
+                    CreationException | NoSuchElementException | WrappedTargetException | IOException |
+                    BibEntryNotFoundException ex) {
                 LOGGER.warn("Problem combining cite markers", ex);
             }
-
         });
         ContextMenu settingsMenu = createSettingsPopup();
         settingsB.setMaxWidth(Double.MAX_VALUE);
@@ -269,18 +267,17 @@ public class OpenOfficePanel {
         hbox.getChildren().addAll(connect, manualConnect, selectDocument, update, help);
         hbox.getChildren().forEach(btn -> HBox.setHgrow(btn, Priority.ALWAYS));
 
-        VBox row1 = new VBox();
-        VBox row2 = new VBox();
-        VBox row3 = new VBox();
-        row1.getChildren().addAll(setStyleFile,pushEntries, pushEntriesInt);
-        row2.getChildren().addAll(pushEntriesAdvanced, pushEntriesEmpty, merge);
-        row3.getChildren().addAll(manageCitations, exportCitations, settingsB);
-        HBox hbox1 =  new HBox();
-        hbox1.getChildren().addAll(row1,row2,row3);
-        hbox1.getChildren().forEach(btn -> HBox.setHgrow(btn, Priority.ALWAYS));
+        FlowPane flow = new FlowPane();
+        flow.setPadding(new Insets(5, 5, 5, 5));
+        flow.setVgap(4);
+        flow.setHgap(4);
+        flow.setPrefWrapLength(200);
+        flow.getChildren().addAll(setStyleFile, pushEntries, pushEntriesInt);
+        flow.getChildren().addAll(pushEntriesAdvanced, pushEntriesEmpty, merge);
+        flow.getChildren().addAll(manageCitations, exportCitations, settingsB);
 
         vbox.setFillWidth(true);
-        vbox.getChildren().addAll(hbox, hbox1);
+        vbox.getChildren().addAll(hbox, flow);
     }
 
     private void exportEntries() {
@@ -299,26 +296,22 @@ public class OpenOfficePanel {
             if (!unresolvedKeys.isEmpty()) {
 
                 dialogService.showErrorDialogAndWait(Localization.lang("Unable to generate new library"),
-                                                     Localization.lang("Your OpenOffice/LibreOffice document references the BibTeX key '%0', which could not be found in your current library.",
-                                                                       unresolvedKeys.get(0)));
-
+                        Localization.lang("Your OpenOffice/LibreOffice document references the citation key '%0', which could not be found in your current library.",
+                                unresolvedKeys.get(0)));
             }
 
             BibDatabaseContext databaseContext = new BibDatabaseContext(newDatabase);
             this.frame.addTab(databaseContext, true);
-
         } catch (BibEntryNotFoundException ex) {
             LOGGER.debug("BibEntry not found", ex);
             dialogService.showErrorDialogAndWait(Localization.lang("Unable to synchronize bibliography"),
-                                                 Localization.lang("Your OpenOffice/LibreOffice document references the BibTeX key '%0', which could not be found in your current library.",
-                                                                   ex.getBibtexKey()));
-
+                    Localization.lang("Your OpenOffice/LibreOffice document references the citation key '%0', which could not be found in your current library.",
+                            ex.getCitationKey()));
         } catch (com.sun.star.lang.IllegalArgumentException | UnknownPropertyException | PropertyVetoException |
-                 UndefinedCharacterFormatException | NoSuchElementException | WrappedTargetException | IOException |
-                 CreationException e) {
+                UndefinedCharacterFormatException | NoSuchElementException | WrappedTargetException | IOException |
+                CreationException e) {
             LOGGER.warn("Problem generating new database.", e);
         }
-
     }
 
     private List<BibDatabase> getBaseList() {
@@ -341,7 +334,7 @@ public class OpenOfficePanel {
             connect();
         } else {
 
-            Task<Void> taskConnectIfInstalled = new Task<Void>() {
+            Task<Void> taskConnectIfInstalled = new Task<>() {
 
                 @Override
                 protected Void call() throws Exception {
@@ -358,7 +351,7 @@ public class OpenOfficePanel {
             taskConnectIfInstalled.setOnSucceeded(value -> connect());
             taskConnectIfInstalled.setOnFailed(value -> dialogService.showErrorDialogAndWait(Localization.lang("Autodetection failed"), Localization.lang("Autodetection failed"), taskConnectIfInstalled.getException()));
 
-            dialogService.showProgressDialogAndWait(Localization.lang("Autodetecting paths..."), Localization.lang("Autodetecting paths..."), taskConnectIfInstalled);
+            dialogService.showProgressDialog(Localization.lang("Autodetecting paths..."), Localization.lang("Autodetecting paths..."), taskConnectIfInstalled);
             taskExecutor.execute(taskConnectIfInstalled);
         }
     }
@@ -375,7 +368,7 @@ public class OpenOfficePanel {
             @Override
             protected OOBibBase call() throws Exception {
                 updateProgress(ProgressBar.INDETERMINATE_PROGRESS, ProgressBar.INDETERMINATE_PROGRESS);
-                List<URL> jarUrls = findOpenOfficeJars(Paths.get(ooPrefs.getInstallationPath()));
+                List<URL> jarUrls = findOpenOfficeJars(Path.of(ooPrefs.getInstallationPath()));
 
                 return createBibBase(jarUrls);
             }
@@ -411,24 +404,23 @@ public class OpenOfficePanel {
                 LOGGER.warn("Could not connect to running OpenOffice/LibreOffice", ex);
 
                 dialogService.showErrorDialogAndWait(Localization.lang("Unable to connect. One possible reason is that JabRef "
-                                                                       + "and OpenOffice/LibreOffice are not both running in either 32 bit mode or 64 bit mode."));
+                        + "and OpenOffice/LibreOffice are not both running in either 32 bit mode or 64 bit mode."));
             } else if (ex instanceof IOException) {
                 LOGGER.warn("Could not connect to running OpenOffice/LibreOffice", ex);
 
                 dialogService.showErrorDialogAndWait(Localization.lang("Could not connect to running OpenOffice/LibreOffice."),
-                                                     Localization.lang("Could not connect to running OpenOffice/LibreOffice.")
-                                                                                                                                + "\n"
-                                                                                                                                + Localization.lang("Make sure you have installed OpenOffice/LibreOffice with Java support.") + "\n"
-                                                                                                                                + Localization.lang("If connecting manually, please verify program and library paths.") + "\n" + "\n" + Localization.lang("Error message:"),
-                                                     ex);
+                        Localization.lang("Could not connect to running OpenOffice/LibreOffice.")
+                                + "\n"
+                                + Localization.lang("Make sure you have installed OpenOffice/LibreOffice with Java support.") + "\n"
+                                + Localization.lang("If connecting manually, please verify program and library paths.") + "\n" + "\n" + Localization.lang("Error message:"),
+                        ex);
             } else {
                 dialogService.showErrorDialogAndWait(Localization.lang("Autodetection failed"), Localization.lang("Autodetection failed"), ex);
             }
         });
 
-        dialogService.showProgressDialogAndWait(Localization.lang("Autodetecting paths..."), Localization.lang("Autodetecting paths..."), connectTask);
+        dialogService.showProgressDialog(Localization.lang("Autodetecting paths..."), Localization.lang("Autodetecting paths..."), connectTask);
         taskExecutor.execute(connectTask);
-
     }
 
     private List<URL> findOpenOfficeJars(Path configurationPath) throws IOException {
@@ -446,7 +438,7 @@ public class OpenOfficePanel {
     }
 
     private OOBibBase createBibBase(List<URL> jarUrls) throws IOException, InvocationTargetException, IllegalAccessException,
-        BootstrapException, CreationException, ClassNotFoundException {
+            BootstrapException, CreationException, ClassNotFoundException {
         return new OOBibBase(jarUrls, true, dialogService);
     }
 
@@ -488,12 +480,12 @@ public class OpenOfficePanel {
                         style = loader.getUsedStyle();
                     }
                     ooBase.insertEntry(entries, database, getBaseList(), style, inParenthesis, withText, pageInfo,
-                                       ooPrefs.getSyncWhenCiting());
+                            ooPrefs.getSyncWhenCiting());
                 } catch (FileNotFoundException ex) {
 
                     dialogService.showErrorDialogAndWait(
-                                                         Localization.lang("No valid style file defined"),
-                                                         Localization.lang("You must select either a valid style file, or use one of the default styles."));
+                            Localization.lang("No valid style file defined"),
+                            Localization.lang("You must select either a valid style file, or use one of the default styles."));
 
                     LOGGER.warn("Problem with style file", ex);
                 } catch (ConnectionLostException ex) {
@@ -503,22 +495,20 @@ public class OpenOfficePanel {
                 } catch (UndefinedParagraphFormatException ex) {
                     reportUndefinedParagraphFormat(ex);
                 } catch (com.sun.star.lang.IllegalArgumentException | UnknownPropertyException | PropertyVetoException |
-                         CreationException | NoSuchElementException | WrappedTargetException | IOException |
-                         BibEntryNotFoundException | IllegalTypeException | PropertyExistException |
-                         NotRemoveableException ex) {
+                        CreationException | NoSuchElementException | WrappedTargetException | IOException |
+                        BibEntryNotFoundException | IllegalTypeException | PropertyExistException |
+                        NotRemoveableException ex) {
                     LOGGER.warn("Could not insert entry", ex);
                 }
             }
-
         }
-
     }
 
     /**
-     * Check that all entries in the list have BibTeX keys, if not ask if they should be generated
+     * Check that all entries in the list have citation keys, if not ask if they should be generated
      *
      * @param entries A list of entries to be checked
-     * @return true if all entries have BibTeX keys, if it so may be after generating them
+     * @return true if all entries have citation keys, if it so may be after generating them
      */
     private boolean checkThatEntriesHaveKeys(List<BibEntry> entries) {
         // Check if there are empty keys
@@ -538,21 +528,21 @@ public class OpenOfficePanel {
 
         // Ask if keys should be generated
         boolean citePressed = dialogService.showConfirmationDialogAndWait(Localization.lang("Cite"),
-                                                                          Localization.lang("Cannot cite entries without BibTeX keys. Generate keys now?"),
-                                                                          Localization.lang("Generate keys"),
-                                                                          Localization.lang("Cancel"));
+                Localization.lang("Cannot cite entries without citation keys. Generate keys now?"),
+                Localization.lang("Generate keys"),
+                Localization.lang("Cancel"));
 
         BasePanel panel = frame.getCurrentBasePanel();
         if (citePressed && (panel != null)) {
             // Generate keys
-            BibtexKeyPatternPreferences prefs = jabRefPreferences.getBibtexKeyPatternPreferences();
+            CitationKeyPatternPreferences prefs = jabRefPreferences.getCitationKeyPatternPreferences();
             NamedCompound undoCompound = new NamedCompound(Localization.lang("Cite"));
             for (BibEntry entry : entries) {
                 if (!entry.getCiteKeyOptional().isPresent()) {
                     // Generate key
-                    new BibtexKeyGenerator(panel.getBibDatabaseContext(), prefs)
-                                                                                .generateAndSetKey(entry)
-                                                                                .ifPresent(change -> undoCompound.addEdit(new UndoableKeyChange(change)));
+                    new CitationKeyGenerator(panel.getBibDatabaseContext(), prefs)
+                            .generateAndSetKey(entry)
+                            .ifPresent(change -> undoCompound.addEdit(new UndoableKeyChange(change)));
                 }
             }
             undoCompound.end();
@@ -568,23 +558,21 @@ public class OpenOfficePanel {
 
     private void showConnectionLostErrorMessage() {
         dialogService.showErrorDialogAndWait(Localization.lang("Connection lost"),
-                                             Localization.lang("Connection to OpenOffice/LibreOffice has been lost. " + "Please make sure OpenOffice/LibreOffice is running, and try to reconnect."));
-
+                Localization.lang("Connection to OpenOffice/LibreOffice has been lost. " + "Please make sure OpenOffice/LibreOffice is running, and try to reconnect."));
     }
 
     private void reportUndefinedParagraphFormat(UndefinedParagraphFormatException ex) {
         dialogService.showErrorDialogAndWait(Localization.lang("Undefined paragraph format"),
-                                             Localization.lang("Your style file specifies the paragraph format '%0', "
-                                                               + "which is undefined in your current OpenOffice/LibreOffice document.",
-                                                               ex.getFormatName()) + "\n" + Localization.lang("The paragraph format is controlled by the property 'ReferenceParagraphFormat' or 'ReferenceHeaderParagraphFormat' in the style file."));
-
+                Localization.lang("Your style file specifies the paragraph format '%0', "
+                                + "which is undefined in your current OpenOffice/LibreOffice document.",
+                        ex.getFormatName()) + "\n" + Localization.lang("The paragraph format is controlled by the property 'ReferenceParagraphFormat' or 'ReferenceHeaderParagraphFormat' in the style file."));
     }
 
     private void reportUndefinedCharacterFormat(UndefinedCharacterFormatException ex) {
         dialogService.showErrorDialogAndWait(Localization.lang("Undefined character format"),
-                                             Localization.lang("Your style file specifies the character format '%0', "
-                                                               + "which is undefined in your current OpenOffice/LibreOffice document.",
-                                                               ex.getFormatName()) + "\n" + Localization.lang("The character format is controlled by the citation property 'CitationCharacterFormat' in the style file.")
+                Localization.lang("Your style file specifies the character format '%0', "
+                                + "which is undefined in your current OpenOffice/LibreOffice document.",
+                        ex.getFormatName()) + "\n" + Localization.lang("The character format is controlled by the citation property 'CitationCharacterFormat' in the style file.")
 
         );
     }
@@ -631,6 +619,5 @@ public class OpenOfficePanel {
         contextMenu.getItems().addAll(autoSync, new SeparatorMenuItem(), useActiveBase, useAllBases, new SeparatorMenuItem(), clearConnectionSettings);
 
         return contextMenu;
-
     }
 }
