@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
@@ -42,7 +41,7 @@ class XmpUtilReaderTest {
         when(importFormatPreferences.getEncoding()).thenReturn(StandardCharsets.UTF_8);
         xmpPreferences = mock(XmpPreferences.class);
         // The code assumes privacy filters to be off
-        when(xmpPreferences.isUseXMPPrivacyFilter()).thenReturn(false);
+        when(xmpPreferences.shouldUseXmpPrivacyFilter()).thenReturn(false);
 
         when(xmpPreferences.getKeywordSeparator()).thenReturn(',');
 
@@ -54,7 +53,7 @@ class XmpUtilReaderTest {
      */
     @Test
     void testReadArticleDublinCoreReadRawXmp() throws IOException, URISyntaxException, ParseException {
-        Path path = Paths.get(XmpUtilShared.class.getResource("article_dublinCore.pdf").toURI());
+        Path path = Path.of(XmpUtilShared.class.getResource("article_dublinCore.pdf").toURI());
         List<XMPMetadata> meta = XmpUtilReader.readRawXmp(path);
 
         DublinCoreSchema dcSchema = meta.get(0).getDublinCoreSchema();
@@ -71,7 +70,7 @@ class XmpUtilReaderTest {
      */
     @Test
     void testReadArticleDublinCoreReadXmp() throws IOException, URISyntaxException, ParseException {
-        Path pathPdf = Paths.get(XmpUtilShared.class.getResource("article_dublinCore.pdf").toURI());
+        Path pathPdf = Path.of(XmpUtilShared.class.getResource("article_dublinCore.pdf").toURI());
         List<BibEntry> entries = XmpUtilReader.readXmp(pathPdf, xmpPreferences);
         BibEntry entry = entries.get(0);
 
@@ -90,7 +89,7 @@ class XmpUtilReaderTest {
      */
     @Test
     void testReadEmtpyMetadata() throws IOException, URISyntaxException {
-        List<BibEntry> entries = XmpUtilReader.readXmp(Paths.get(XmpUtilShared.class.getResource("empty_metadata.pdf").toURI()), xmpPreferences);
+        List<BibEntry> entries = XmpUtilReader.readXmp(Path.of(XmpUtilShared.class.getResource("empty_metadata.pdf").toURI()), xmpPreferences);
         assertEquals(Collections.emptyList(), entries);
     }
 
@@ -99,7 +98,7 @@ class XmpUtilReaderTest {
      */
     @Test
     void testReadPDMetadata() throws IOException, URISyntaxException, ParseException {
-        Path pathPdf = Paths.get(XmpUtilShared.class.getResource("PD_metadata.pdf").toURI());
+        Path pathPdf = Path.of(XmpUtilShared.class.getResource("PD_metadata.pdf").toURI());
         List<BibEntry> entries = XmpUtilReader.readXmp(pathPdf, xmpPreferences);
 
         String bibString = Resources.toString(XmpUtilShared.class.getResource("PD_metadata.bib"), StandardCharsets.UTF_8);
@@ -109,5 +108,14 @@ class XmpUtilReaderTest {
         );
 
         assertEquals(entryFromBibFile.get(), entries.get(0));
+    }
+
+    /**
+     * Tests an pdf file with metadata which has no description section.
+     */
+    @Test
+    void testReadNoDescriptionMetadata() throws IOException, URISyntaxException {
+        List<BibEntry> entries = XmpUtilReader.readXmp(Path.of(XmpUtilShared.class.getResource("no_description_metadata.pdf").toURI()), xmpPreferences);
+        assertEquals(Collections.emptyList(), entries);
     }
 }
