@@ -1,8 +1,8 @@
 package org.jabref.model.groups;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
+import org.jabref.architecture.AllowedToUseLogic;
 import org.jabref.logic.auxparser.DefaultAuxParser;
 import org.jabref.model.database.BibDatabase;
 import org.jabref.model.entry.BibEntry;
@@ -16,6 +16,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+@AllowedToUseLogic("because class under test relies on logic classes")
 public class TexGroupTest {
 
     private MetaData metaData;
@@ -27,7 +28,7 @@ public class TexGroupTest {
 
     @Test
     public void containsReturnsTrueForEntryInAux() throws Exception {
-        Path auxFile = Paths.get(TexGroupTest.class.getResource("paper.aux").toURI());
+        Path auxFile = Path.of(TexGroupTest.class.getResource("paper.aux").toURI());
         TexGroup group = new TexGroup("paper", GroupHierarchyType.INDEPENDENT, auxFile, new DefaultAuxParser(new BibDatabase()), new DummyFileUpdateMonitor(), metaData);
         BibEntry inAux = new BibEntry();
         inAux.setCiteKey("Darwin1888");
@@ -37,7 +38,7 @@ public class TexGroupTest {
 
     @Test
     public void containsReturnsTrueForEntryNotInAux() throws Exception {
-        Path auxFile = Paths.get(TexGroupTest.class.getResource("paper.aux").toURI());
+        Path auxFile = Path.of(TexGroupTest.class.getResource("paper.aux").toURI());
         TexGroup group = new TexGroup("paper", GroupHierarchyType.INDEPENDENT, auxFile, new DefaultAuxParser(new BibDatabase()), new DummyFileUpdateMonitor(), metaData);
         BibEntry notInAux = new BibEntry();
         notInAux.setCiteKey("NotInAux2017");
@@ -47,7 +48,7 @@ public class TexGroupTest {
 
     @Test
     public void getFilePathReturnsRelativePath() throws Exception {
-        Path auxFile = Paths.get(TexGroupTest.class.getResource("paper.aux").toURI());
+        Path auxFile = Path.of(TexGroupTest.class.getResource("paper.aux").toURI());
         String user = "Darwin";
         metaData.setLatexFileDirectory(user, auxFile.getParent());
         TexGroup group = new TexGroup("paper", GroupHierarchyType.INDEPENDENT, auxFile, new DefaultAuxParser(new BibDatabase()), new DummyFileUpdateMonitor(), metaData, user);
